RESOLVED FIXED121209
XMLSerializer.serializeToString() should throw exception for invalid node value.
https://bugs.webkit.org/show_bug.cgi?id=121209
Summary XMLSerializer.serializeToString() should throw exception for invalid node value.
Vivek Galatage
Reported 2013-09-11 21:23:45 PDT
XMLSerializer.serializeToString() should throw exception for invalid node value. FF and Opera 12 (pre blink/webkit) throw exception in case the node value is invalid. Blink sends an empty string as the result of serializeToString operation with invalid node. We should match with other browsers for throwing it as an exception. Blink review URL: https://chromiumcodereview.appspot.com/23532055/ Patch follows.
Attachments
Patch (8.56 KB, patch)
2013-09-11 21:29 PDT, Vivek Galatage
no flags
Vivek Galatage
Comment 1 2013-09-11 21:29:14 PDT
WebKit Commit Bot
Comment 2 2013-09-12 07:40:52 PDT
Comment on attachment 211392 [details] Patch Clearing flags on attachment: 211392 Committed r155609: <http://trac.webkit.org/changeset/155609>
WebKit Commit Bot
Comment 3 2013-09-12 07:40:53 PDT
All reviewed patches have been landed. Closing bug.
Lucas Forschler
Comment 4 2019-02-06 09:02:38 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note You need to log in before you can comment on or make changes to this bug.