XMLSerializer.serializeToString() should throw exception for invalid node value. https://bugs.webkit.org/show_bug.cgi?id=121209

Reviewed by Darin Adler.

Source/WebCore:

FF and Opera 12 (pre blink/webkit) throw exception in case the node value is invalid.
Blink sends an empty string as the result of serializeToString operation with invalid node.
We should match with other browsers for throwing it as an exception.

Blink review URL: https://chromiumcodereview.appspot.com/23532055/

Test: fast/dom/xmlserializer-serialize-to-string-exception.html

* xml/XMLSerializer.cpp:
(WebCore::XMLSerializer::serializeToString):

LayoutTests:

* fast/dom/xmlserializer-serialize-to-string-exception-expected.txt: Added.
* fast/dom/xmlserializer-serialize-to-string-exception.html: Added.


Canonical link: https://commits.webkit.org/139167@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155609 268f45cc-cd09-0410-ab3c-d52691b4dbfc